Trying to fix sidebar on mobile devies for iOS

--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -1,5 +1,7 @@
 .sidenav-container {
   height: 100%;
+  -webkit-overflow-scrolling: touch;
+  position: sticky;
 }
 
 .sidenav {
@@ -28,6 +30,7 @@
 
 .header-toolbar {
   padding: 2.5rem 6.3rem 2.5rem 2rem;
+  position: sticky;
 }
 
 .header-title {
@@ -119,8 +122,8 @@
 .background-blur {
   background-color: rgba(0, 0, 0, 0.3);
   width: 100%;
-  height: 100vh;
-
+  height: 50rem;
+  position: sticky;
   z-index: 10;
 }
 
